[gd_scene load_steps=24 format=3 uid="uid://bdij7j4qr7lav"]

[ext_resource type="Script" uid="uid://csgwgrvb07dms" path="res://scenes/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://byicjprh8agko" path="res://assets/Human-Worker-Red.png" id="1_nh2m4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abqhh"]
atlas = ExtResource("1_nh2m4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv78h"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8xq"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wlns"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl2vt"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwkja"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tygy"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sptji"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4e37"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h837"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl1un"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuru7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyaq3"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf2ql"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gbmn"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvipr"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0klm"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2tho"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca6vw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv78h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wlns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl2vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwkja")
}],
"loop": true,
"name": &"walk_east",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sptji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4e37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h837")
}],
"loop": true,
"name": &"walk_north",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyaq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf2ql")
}],
"loop": true,
"name": &"walk_south",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gbmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0klm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2tho")
}],
"loop": true,
"name": &"walk_west",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t8u8m"]
radius = 3.999507
height = 15.966613

[sub_resource type="CircleShape2D" id="CircleShape2D_d56e8"]
radius = 22.022722

[node name="npc" type="CharacterBody2D"]
script = ExtResource("1_abqhh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ca6vw")
animation = &"walk_south"
autoplay = "idle"
frame_progress = 0.548302

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.000001)
rotation = 1.5865043
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("CapsuleShape2D_t8u8m")

[node name="chat_detection_area" type="Area2D" parent="."]
position = Vector2(0, 6.000001)
rotation = 1.5865043
scale = Vector2(0.9999999, 0.9999999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(-3.9995081, 0.062829494)
shape = SubResource("CircleShape2D_d56e8")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_shape_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_shape_entered"]
[connection signal="body_shape_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
